--- a/style.css
+++ b/style.css
@@ -171,3 +171,85 @@ a.potion-button-red:focus{
   letter-spacing: 1px;
   text-shadow: 2px 2px 2px black;
 }
+
+
+
+/*/////////////////////*/
+/*
+    Hide the original radios and checkboxes
+    (but still accessible)
+
+    :not(#foo) > is a rule filter to block browsers
+                 that don't support that selector from
+                 applying rules they shouldn't
+
+*/
+/*li:not(#foo) > fieldset > div > span > input[type='radio'],*/
+li:not(#foo) > fieldset > div > span > input[type='checkbox'] {
+
+    /* Hide the input, but have it still be clickable */
+    opacity: 0;
+
+    float: left;
+    width: 18px;
+}
+
+
+/*li:not(#foo) > fieldset > div > span > input[type='radio'] + label,*/
+li:not(#foo) > fieldset > div > span > input[type='checkbox'] + label {
+    margin: 0;
+    clear: none;
+
+    /* Left padding makes room for image */
+    padding: 5px 0 4px 24px;
+
+    /* Make look clickable because they are */
+    cursor: pointer;
+
+    background: url(checkbox-unchk-std.png) left center no-repeat;
+}
+
+/*
+    Change from unchecked to checked graphic
+*/
+/*li:not(#foo) > fieldset > div > span > input[type='radio']:checked + label {
+    background-image: url(radio.png);
+}*/
+li:not(#foo) > fieldset > div > span > input[type='checkbox']:checked + label {
+    background-image: url(checkbox-chk-std.png);
+}
+
+
+/*////////////////////////////////////////////////////////////*/
+/*////////////////////////////////////////////////////////////*/
+/*////////////////////////////////////////////////////////////*/
+/*////////////////////////////////////////////////////////////*/
+
+input[type='radio'], input[type='checkbox'] {
+
+    opacity: 0;
+    float: left;
+    width: 18px;
+    height:18px;
+    cursor: pointer;
+    margin-top:20px;
+}
+
+
+input[type='radio'] + label, input[type='checkbox'] + label {
+
+margin: 0;
+    margin-left:-18px;
+    clear: none;
+    padding: 5px 0 4px 24px;
+    background: url(img/checkbox-unchk-std.png) left center no-repeat;
+}
+
+
+input[type='radio']:checked + label {
+    background-image: url(img/checkbox-chk-std.png);
+}
+
+input[type='checkbox']:checked + label {
+    background-image: url(img/checkbox-chk-std.png);
+}
