--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ h1, h2, h3, h4, h5, h6, p, ul, li{
 /*media query for large screens*/
 @media (min-width: 992px) {
   body{
-    background: url("img/OldBook2.jpg") no-repeat center center fixed;
+    background: url("img/OldBook2-drawn.jpg") no-repeat center center fixed;
     background-size: cover;
 
   }
@@ -141,7 +141,6 @@ a.potion-button:focus{
 }
 .potion-button-red:target{
   background-position: bottom;
-
 }
 a.potion-button-red:active{
   color: beige;
@@ -150,17 +149,18 @@ a.potion-button-red:active{
 }
 .potion-button-red:hover{
   background-position: top;
-
 }
 a.potion-button-red:hover{
   color: beige;
-
   text-decoration:none;
 }
 a.potion-button-red:focus{
   outline:none;
   color:beige;
   text-decoration:none;
+}
+#potion_button{
+  margin-top:20px;
 }
 /*.immortalregular{
   font-family: 'immortalregular';
@@ -240,7 +240,7 @@ input[type='radio'] + label, input[type='checkbox'] + label {
   margin: 0;
   margin-left:-18px;
   clear: none;
-  padding: 5px 0 4px 24px;
+  padding: 5px 0 4px 28px;
 }
 /* UNCHEKED */
 input[type='radio'] + label{
