--- a/style.css
+++ b/style.css
@@ -1,16 +1,4 @@
 @font-face {
-    font-family: 'deutsch_gothicnormal';
-    src: url('fonts/Deutsch-webfont.eot');
-    src: url('fonts/Deutsch-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/Deutsch-webfont.woff') format('woff'),
-         url('fonts/Deutsch-webfont.ttf') format('truetype'),
-         url('fonts/Deutsch-webfont.svg#deutsch_gothicnormal') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
     font-family: 'uglyquaregular';
     src: url('fonts/UglyQua-webfont.eot');
     src: url('fonts/UglyQua-webfont.eot?#iefix') format('embedded-opentype'),
@@ -22,23 +10,9 @@
 
 }
 
-/*@font-face {
-    font-family: 'immortalregular';
-    src: url('fonts/immortal-webfont.eot');
-    src: url('fonts/immortal-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/immortal-webfont.woff') format('woff'),
-         url('fonts/immortal-webfont.ttf') format('truetype'),
-         url('fonts/immortal-webfont.svg#immortalregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}*/
-
-
-
 
 body{
-  /*background: url('img/paper-background.png');*/
-  background: url('img/OldBook2-half-compressed.jpg') no-repeat center center fixed;
+  background: url('img/OldBook2-half-compressor.jpg') no-repeat center center fixed;
   background-repeat: no-repeat;
   background-size: cover;
   padding:20px;
@@ -46,44 +20,50 @@ body{
   color:#262626;
   font-family:serif;
 }
-h1, h2, h3, h4, h5, h6, p, ul, li{
-  font-family: serif;
-}
 /*media query for large screens*/
 @media (min-width: 992px) {
   body{
-    background: url("img/OldBook2-drawn-compressed.jpg") no-repeat center center fixed;
+    background: url("img/OldBook2-drawn-compressor.jpg") no-repeat center center fixed;
     background-size: cover;
 
   }
 }
 
+h1, h2, h3 {
+  font-family: 'uglyquaregular', serif;
+}
+h4, h5, h6, p, ul, li{
+  font-family: serif;
+}
+footer p{
+  font-family: 'uglyquaregular';
+}
+
+
+a{
+  color : #B72222;
+}
+a:hover{
+  color: #550000;
+}
+
+
+
 .row{
-   /*background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/14179/washington.jpg") no-repeat center center fixed;*/
     background-size: cover;
 }
 
 .bg-blend {
   position:fixed;
-  /*background: url('img/skull2.jpg');*/
-  /*-moz-mix-blend-mode: darken;*/
   width:200px;
   height:250px;
-  /*background-size: cover;*/
-  /*background-color: #002B65;*/
-
   background-image: url("img/skull2.jpg");
   color: white;
   background-size: cover;
   mix-blend-mode: darken;
 }
 
-
-h1 {
-  font-family: 'uglyquaregular';
-}
 .well{
-  /*background: url('img/OldBook2.jpg');*/
   background:transparent;
   background-position:  top left;
   background-size: contain;
@@ -162,12 +142,10 @@ a.potion-button-red:focus{
 #potion_button{
   margin-top:20px;
 }
-/*.immortalregular{
-  font-family: 'immortalregular';
-}*/
+
 .uglyquaregular{
   font-family: 'uglyquaregular';
-  font-size:1em;
+  font-size:2em;
   letter-spacing: 1px;
   text-shadow: 2px 2px 2px black;
 }
